--- a/K8s Files/deployment.yaml
+++ b/K8s Files/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: netflix-app
-        image: sevenajay/netflix:latest
+        image: jayy2op/netflix:latest
         ports:
         - containerPort: 80
